force-app/main/default/objects/Lead/fields/BDL_Clinical_Trials__c.field-meta.xml
<CustomField>
    <fullName>BDL_Clinical_Trials__c</fullName>
    <description>Link for Clinical Trial.
Demen S. 20th March 2023.</description>
    <label>Clinical Trials</label>
    <type>Url</type>
</CustomField>