force-app/main/default/objects/Lead/fields/BDL_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>BDL_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify decision makers.
Demen S. 20th March 2023.</description>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>