force-app/main/default/objects/Lead/fields/BDL_Development_Phase__c.field-meta.xml
<CustomField>
    <fullName>BDL_Development_Phase__c</fullName>
    <description>List of Development Phases for Molecule.
Demen S. 20th March 2023.</description>
    <label>Development Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_Development_Phase</valueSetName>
    </valueSet>
</CustomField>