force-app/main/default/objects/Lead/fields/BDL_DOI__c.field-meta.xml
<CustomField>
    <fullName>BDL_DOI__c</fullName>
    <description>Digital Object Identifier for Publications.
Demen S. 20th March 2023.</description>
    <label>DOI</label>
    <type>Url</type>
</CustomField>