force-app/main/default/objects/Lead/fields/BDL_Has_Budget__c.field-meta.xml
<CustomField>
    <fullName>BDL_Has_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify if Lead has budget or not.
Demen S. 20th March 2023.</description>
    <label>Has Budget?</label>
    <type>Checkbox</type>
</CustomField>