force-app/main/default/objects/Lead/fields/BDL_Indications__c.field-meta.xml
<CustomField>
    <fullName>BDL_Indications__c</fullName>
    <description>List of Indications Lead is interested/specialized in.
Demen S. 20th March 2023.</description>
    <label>Indications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_Indications</valueSetName>
    </valueSet>
</CustomField>