force-app/main/default/objects/Lead/fields/BDL_PubMed__c.field-meta.xml
<CustomField>
    <fullName>BDL_PubMed__c</fullName>
    <description>PubMed Link for Lead.
Demen S. 20th March 2023.</description>
    <label>PubMed</label>
    <type>Url</type>
</CustomField>