force-app/main/default/objects/Lead/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <description>A list of Deal Type from global value set &quot;Deal Types&quot;.
Demen S. 20th March 2023.</description>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_Deal_Types</valueSetName>
    </valueSet>
</CustomField>