force-app/main/default/objects/Lead/recordTypes/BDL_BDL_Lead.recordType-meta.xml
<RecordType>
    <fullName>BDL_BDL_Lead</fullName>
    <active>true</active>
    <businessProcess>BDL Process</businessProcess>
    <label>BD&amp;L Lead</label>
</RecordType>