force-app/main/default/objects/Lead/listViews/BD_L_Leads.listView-meta.xml
<ListView>
    <fullName>BD_L_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>BDL_Therapeutic_Area__c</columns>
    <columns>BDL_Indications__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>BD&amp;L Leads</label>
    <sharedTo>
        <group>BDL_BDL_All_Users</group>
    </sharedTo>
</ListView>